# server/item.router.js
@@ -3,42 +3,48 @@ const router = express.Router();
 const mongoose = require("mongoose");
 const Item = require("./item.model.js");
 
-
+/**
+ * Deletes an item
+ */
 router.delete("/items/:itemId", (req, res) => {
     Item.deleteOne({"_id" : mongoose.Types.ObjectId(req.params.itemId)}, (err) => {
         if(err) {
             console.log(err);
-            return res.send(500);
-        }
-        console.log("save success!");
-        return res.send(204);
+            res.sendStatus(500);
+        } 
+        console.log("Deletion successful");
+        return res.sendStatus(204);
     });
 });
 
+/**
+ * Create a new item
+ */
 router.post("/", (req, res) => {
     const props = {
-        imgSrc: "image.com",
-        title: "phone",
+        imgSrc: "example.invalid",
+        title: "phone red",
         price: 200,
-        category: "phones",
+        category: "phones"
     };
+    
     const item1 = new Item(props);
-    item1.save( err =>{
+    item1.save (err => {
         if(err){
-            console.log("Error", err);
-            res.send(500);
+            console.log("Error: ", err);
+            res.sendStatus(500);
             return;
         }
-        console.log("Success create!");
-        res.send(201);
+        console.log("Success createItem");
+        res.sendStatus(201);
     });
 });
 
 /** Returns an item */
 router.get("/:itemId",(req, res)=>{
-        Item.findById(req.params.itemId, function(err, item){
+    Item.findById(req.params.itemId, function(err, item) {
         if(err){
-            console.log("Error:", err);
+            console.log("Error: ", err);
             res.status(500).send(err);
             return;
         }
@@ -46,15 +52,18 @@ router.get("/:itemId",(req, res)=>{
     });
 });
 
+/**
+ * Returns all items
+ */
 router.get("/",(req, res)=>{
-    Item.find({}, function(err, items) {
+    Item.find({}, function(err, items){
         if(err){
-            console.log("Error:", err);
+            console.log("Error: ", err);
             res.status(500).send(err);
             return;
         }
         res.send(items);
     });
-  });
+});
 
 module.exports = router;
