# server/user.controller.js
@@ -1,31 +1,26 @@
 const User = require("./user.model.js");
 const jwt = require("jsonwebtoken");
 
-exports.login=(req, res) => {
-    //console.log("login", req.body);
+exports.login = (req, res) => {
     User.login(req.body)
-    .then( user => {
+    .then(user => {
         jwt.sign(user, process.env.JWT_KEY, function(err, token) {
             if(err) {
-                return res.status(500);
+                console.log("err", err);
+                return res.status(500).send(err);
             }
-            res.status(200).send({
-                user,
-                token, 
-            });
+            res.status(200).send({user, token});
         });
-    })
-    .catch( err => {
-        res.send(401);
+    }).catch(err => {
+        res.status(401).send(err);
     });
 };
 
 exports.signup = (req, res) => {
     User.signup(req.body)
-    .then( user => {
+    .then(user => {
         res.status(200).json(user);
-    })
-    .catch(err => {
-        res.send(500);
-    }); 
-}; 
+    }).catch(err => {
+        res.status(500).send(err);
+    });
+};
